--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/melodic/pyros_test
-	previous = 
-	base = e97eac3
+	previous = e97eac3
+	base = 5e709cb
 	trim = 
 	trimbase = 
