--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/melodic/pyros_test
-	previous = 
-	base = 49660e8
+	previous = 49660e8
+	base = 9e21958
 	trim = 
 	trimbase = 
