--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/melodic/pyros_test
-	previous = 
-	base = dfb3473
+	previous = dfb3473
+	base = 50da1db
 	trim = 
 	trimbase = 
