--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/melodic/pyros_test
-	previous = 
-	base = 33748aa
+	previous = 33748aa
+	base = 6cca1fe
 	trim = 
 	trimbase = 
